fixed image not showing

--- a/style.css
+++ b/style.css
@@ -9,7 +9,7 @@ body {
 
 .bg-0 {
   height: 100vh;
-  background-image: url('images/initials.png');
+  background-image: url('images/Initials.png');
   background-attachment: fixed;
   background-repeat: no-repeat;
   color: #ffef96;
